<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="horizontal"
    tools:context="com.graise.ansafn.lifeblood.ActivityMain">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:background="@drawable/bg_base"
        android:gravity="center"
        android:orientation="vertical">

        <ListView
            android:id="@+id/lstRequest"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="@dimen/btnWidth"
            android:layout_height="@dimen/btnHeight"
            android:layout_margin="@dimen/mainTextMargin"
            android:background="@drawable/lb_btnp_small"
            android:paddingLeft="@dimen/leftMargin"
            android:paddingTop="@dimen/leftMargin"
            android:text="@string/becomeDonor" />

        <Button
            android:id="@+id/btnTempRegister"
            android:layout_width="@dimen/btnWidth"
            android:layout_height="@dimen/btnHeight"
            android:layout_below="@+id/btnSignUp"
            android:layout_margin="@dimen/mainTextMargin"
            android:background="@drawable/lb_btnp_small"
            android:paddingLeft="@dimen/leftMargin"
            android:paddingTop="@dimen/leftMargin"
            android:text="@string/register" />

        <Button
            android:id="@+id/btnEligDetect"
            android:layout_width="@dimen/btnWidth"
            android:layout_height="@dimen/btnHeight"
            android:layout_below="@+id/btnTempRegister"
            android:layout_margin="@dimen/mainTextMargin"
            android:background="@drawable/lb_btnp_small"
            android:paddingLeft="@dimen/leftMargin"
            android:paddingTop="@dimen/leftMargin"
            android:text="@string/eligDetect" />


    </LinearLayout>

</LinearLayout>
